k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops-node-app
  namespace: devops-demo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: devops-node-app
  template:
    metadata:
      labels:
        app: devops-node-app
    spec:
      containers:
        - name: devops-node-app
          image: 060763492167.dkr.ecr.us-east-1.amazonaws.com/devops-node-app:latest
          imagePullPolicy: Always

          ports:
            - containerPort: 8000

          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 15

          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
