k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-node-service
  namespace: devops-demo
spec:
  selector:
    app: devops-node-app

  ports:
    - port: 80
      targetPort: 8000

  type: LoadBalancer
