k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devops-node-ingress
  namespace: devops-demo
spec:
  ingressClassName: nginx

  rules:
    - host: devops.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: devops-node-service
                port:
                  number: 80
